--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "electron-rebuild": "^1.4.0"
   },
   "dependencies": {
-    "ipfs": "^0.20.3",
+    "ipfs-api": "^12.1.2",
     "jQuery": "^1.7.4"
   }
 }
