--- a/package.json
+++ b/package.json
@@ -1,30 +1,28 @@
 {
-  "name": "electron-quick-start",
+  "name": "aletheia-app",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "Decentralised science",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "postinstall": "postinstall.sh"
+    "start": "electron ."
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
+    "Aletheia",
+    "Decentralised",
+    "Academic",
+    "Publishing",
+    "Ipfs"
   ],
-  "author": "GitHub",
-  "license": "LGPL",
+  "author": "aletheia-foundation",
+  "license": " LGPL-3.0",
   "devDependencies": {
     "electron": "^1.4.1",
-    "electron-rebuild": "^1.4.0",
+    "expect.js": "^0.3.1",
     "mocha": "^3.2.0"
   },
   "dependencies": {
-    "expect.js": "^0.3.1",
-    "ipfs-api": "",
+    "ipfs-api": "git+https://github.com/aletheia-foundation/js-ipfs-api.git",
     "jQuery": "1.7.4"
   }
 }
