--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "ipfs-api": "git+https://github.com/aletheia-foundation/js-ipfs-api.git",
-    "jQuery": "1.7.4"
+    "jQuery": "1.7.4",
+    "web3": "^0.18.2"
   }
 }
