--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": " LGPL-3.0",
   "devDependencies": {
     "electron": "^1.4.1",
+    "embark": "git+https://github.com/aletheia-foundation/embark-framework.git",
     "expect.js": "^0.3.1",
     "mocha": "^3.2.0",
     "rimraf": "^2.5.4",
