--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "bs58": "^4.0.0",
     "electron": "^1.4.1",
-    "embark": "git+https://github.com/aletheia-foundation/embark-framework.git",
+    "embark": "git+https://github.com/aletheia-foundation/embark-framework.git#develop",
     "expect.js": "^0.3.1",
     "mocha": "^3.2.0",
     "rimraf": "^2.5.4",
