--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Decentralised science",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "truffle migrate && electron .",
+    "test": "truffle test && truffle migrate && mocha",
+    "testchain": "testrpc",
+    "ipfs-local": "./scripts/ipfs-local.sh"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -19,12 +22,13 @@
   "devDependencies": {
     "bs58": "^4.0.0",
     "electron": "^1.4.1",
-    "embark": "git+https://github.com/aletheia-foundation/embark-framework.git#develop",
+    "ethereumjs-testrpc": "^3.0.5",
     "expect.js": "^0.3.1",
     "mocha": "^3.2.0",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.7",
-    "solc": "^0.4.9"
+    "solc": "^0.4.9",
+    "truffle": "^3.2.1"
   },
   "dependencies": {
     "config": "^1.25.1",
@@ -32,6 +36,7 @@
     "ipfs-api": "git+https://github.com/aletheia-foundation/js-ipfs-api.git",
     "jQuery": "1.7.4",
     "q": "^1.4.1",
+    "truffle-contract": "^2.0.0",
     "web3": "^0.18.2"
   }
 }
