update readme to take into account simplified setup and remove references to embark framework

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "truffle migrate && electron .",
     "test": "truffle test && truffle migrate && mocha",
-    "testchain": "testrpc",
+    "ethereum-local": "testrpc",
     "ipfs-local": "./scripts/ipfs-local.sh"
   },
   "repository": "https://github.com/electron/electron-quick-start",
