add utility script to attach to local testnet

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "ethereum-local": "testrpc",
     "ipfs-local": "./scripts/ipfs-local.sh",
     "ethereum-testnet": "./scripts/start-geth-testnet.sh",
-    "ethereum-testnet:attach": "./scripts/attach-geth-testnet.sh",
+    "ethereum-testnet:attach": "./scripts/attach-geth-testnet.sh"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
