--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ipfs-api": "git+https://github.com/aletheia-foundation/js-ipfs-api.git",
     "jQuery": "1.7.4",
     "q": "1.5.0",
+    "request-promise-native": "^1.0.4",
     "truffle-contract": "2.0.1",
     "truffle-expect": "0.0.3",
     "web3": "0.18.4"
