--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "dependencies": {
     "config": "1.26.1",
     "ipfs-api": "git+https://github.com/aletheia-foundation/js-ipfs-api.git",
-    "jQuery": "1.7.4",
+    "jquery": "3.2.1",
     "q": "1.5.0",
     "request-promise-native": "^1.0.4",
     "truffle-contract": "2.0.1",
