--- a/package.json
+++ b/package.json
@@ -4,12 +4,30 @@
   "description": "Decentralised science",
   "main": "main.js",
   "scripts": {
-    "start": "./node_modules/.bin/truffle migrate && electron .",
-    "test": "./node_modules/.bin/truffle test && ./node_modules/.bin/truffle migrate && mocha",
+    "startOld": "./node_modules/.bin/truffle migrate && electron .",
+    "testOld": "./node_modules/.bin/truffle test && ./node_modules/.bin/truffle migrate && mocha",
     "ethereum-local": "testrpc",
     "ipfs-local": "./scripts/ipfs-local.sh",
     "ethereum-testnet": "./scripts/start-geth-testnet.sh",
-    "ethereum-testnet:attach": "./scripts/attach-geth-testnet.sh"
+    "ethereum-testnet:attach": "./scripts/attach-geth-testnet.sh",
+
+    "ng": "ng",
+    "lint": "ng lint",
+    "start": "webpack --watch",
+    "start:web": "webpack-dev-server --content-base . --port 4200 --inline",
+    "build:electron:main": "tsc main.ts --outDir dist && copyfiles package.json dist && cd dist && npm install --prod && cd ..",
+    "build": "webpack --display-error-details && npm run build:electron:main",
+    "build:prod": "cross-env NODE_ENV=production npm run build",
+    "electron:serve": "npm run build:electron:main && electron ./dist --serve",
+    "electron:test": "electron ./dist",
+    "electron:dev": "npm run build && electron ./dist",
+    "electron:prod": "npm run build:prod && electron ./dist",
+    "electron:linux": "npm run build:prod && node package.js --asar --platform=linux --arch=x64",
+    "electron:windows": "npm run build:prod && node package.js --asar --platform=win32 --arch=ia32",
+    "electron:mac": "npm run build:prod && node package.js --asar --platform=darwin --arch=x64",
+    "test": "karma start ./karma.conf.js",
+    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet && npm run build",
+    "e2e": "protractor ./protractor.conf.js"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -23,17 +41,66 @@
   "license": "LGPL-3.0",
   "devDependencies": {
     "bs58": "4.0.1",
-    "electron": "1.6.11",
     "ethereumjs-testrpc": "3.9.2",
     "expect.js": "0.3.1",
-    "mkdirp": "0.5.1",
     "mocha": "3.4.2",
     "sinon": "1.17.7",
     "solc": "0.4.11",
     "truffle": "3.3.2",
     "truffle-config": "1.0.0",
     "truffle-contract": "2.0.1",
-    "truffle-expect": "0.0.3"
+    "truffle-expect": "0.0.3",
+
+
+
+
+    "@angular/cli": "1.4.1",
+    "@angular/compiler-cli": "4.3.5",
+    "@types/core-js": "0.9.36",
+    "@types/jasmine": "2.5.54",
+    "@types/node": "7.0.7",
+    "autoprefixer": "7.1.4",
+    "codelyzer": "3.1.2",
+    "copyfiles": "1.2.0",
+    "cross-env": "5.0.5",
+    "css-loader": "0.28.7",
+    "cssnano": "3.10.0",
+    "electron": "1.7.6",
+    "electron-packager": "9.0.1",
+    "electron-reload": "1.2.1",
+    "exports-loader": "0.6.4",
+    "file-loader": "0.11.2",
+    "html-loader": "0.5.1",
+    "istanbul-instrumenter-loader": "3.0.0",
+    "jasmine-core": "2.8.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "json-loader": "0.5.7",
+    "karma": "1.7.1",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "1.3.0",
+    "karma-jasmine": "1.1.0",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "karma-sourcemap-loader": "0.3.7",
+    "less-loader": "4.0.5",
+    "minimist": "1.2.0",
+    "mkdirp": "0.5.1",
+    "postcss-loader": "2.0.6",
+    "postcss-url": "7.1.2",
+    "protractor": "5.1.2",
+    "raw-loader": "0.5.1",
+    "sass-loader": "6.0.6",
+    "script-loader": "0.7.0",
+    "source-map-loader": "0.2.1",
+    "style-loader": "0.18.2",
+    "stylus-loader": "3.0.1",
+    "ts-node": "3.3.0",
+    "tslint": "5.7.0",
+    "typescript": "2.5.2",
+    "url-loader": "0.5.9",
+    "webdriver-manager": "12.0.6",
+    "webpack": "3.5.6",
+    "webpack-dev-server": "2.7.1"
   },
   "dependencies": {
     "config": "1.26.1",
@@ -43,6 +110,20 @@
     "request-promise-native": "^1.0.4",
     "truffle-contract": "2.0.1",
     "truffle-expect": "0.0.3",
-    "web3": "0.18.4"
+    "web3": "0.18.4",
+
+
+    "@angular/common": "4.3.5",
+    "@angular/compiler": "4.3.5",
+    "@angular/core": "4.3.5",
+    "@angular/forms": "4.3.5",
+    "@angular/http": "4.3.5",
+    "@angular/platform-browser": "4.3.5",
+    "@angular/platform-browser-dynamic": "4.3.5",
+    "@angular/router": "4.3.5",
+    "core-js": "2.4.1",
+    "enhanced-resolve": "3.3.0",
+    "rxjs": "5.4.3",
+    "zone.js": "0.8.17"
   }
 }
