--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "ipfs-local": "./scripts/ipfs-local.sh",
     "ethereum-testnet": "./scripts/start-geth-testnet.sh",
     "ethereum-testnet:attach": "./scripts/attach-geth-testnet.sh",
-
     "ng": "ng",
     "lint": "ng lint",
     "start": "webpack --watch",
@@ -40,26 +39,13 @@
   "author": "aletheia-foundation",
   "license": "LGPL-3.0",
   "devDependencies": {
-    "bs58": "4.0.1",
-    "ethereumjs-testrpc": "3.9.2",
-    "expect.js": "0.3.1",
-    "mocha": "3.4.2",
-    "sinon": "1.17.7",
-    "solc": "0.4.11",
-    "truffle": "3.3.2",
-    "truffle-config": "1.0.0",
-    "truffle-contract": "2.0.1",
-    "truffle-expect": "0.0.3",
-
-
-
-
     "@angular/cli": "1.4.1",
     "@angular/compiler-cli": "4.3.5",
     "@types/core-js": "0.9.36",
     "@types/jasmine": "2.5.54",
-    "@types/node": "7.0.7",
+    "@types/node": "^7.0.7",
     "autoprefixer": "7.1.4",
+    "bs58": "4.0.1",
     "codelyzer": "3.1.2",
     "copyfiles": "1.2.0",
     "cross-env": "5.0.5",
@@ -68,6 +54,8 @@
     "electron": "1.7.6",
     "electron-packager": "9.0.1",
     "electron-reload": "1.2.1",
+    "ethereumjs-testrpc": "3.9.2",
+    "expect.js": "0.3.1",
     "exports-loader": "0.6.4",
     "file-loader": "0.11.2",
     "html-loader": "0.5.1",
@@ -85,15 +73,22 @@
     "less-loader": "4.0.5",
     "minimist": "1.2.0",
     "mkdirp": "0.5.1",
+    "mocha": "3.4.2",
     "postcss-loader": "2.0.6",
     "postcss-url": "7.1.2",
     "protractor": "5.1.2",
     "raw-loader": "0.5.1",
     "sass-loader": "6.0.6",
     "script-loader": "0.7.0",
+    "sinon": "1.17.7",
+    "solc": "0.4.11",
     "source-map-loader": "0.2.1",
     "style-loader": "0.18.2",
     "stylus-loader": "3.0.1",
+    "truffle": "3.3.2",
+    "truffle-config": "1.0.0",
+    "truffle-contract": "2.0.1",
+    "truffle-expect": "0.0.3",
     "ts-node": "3.3.0",
     "tslint": "5.7.0",
     "typescript": "2.5.2",
@@ -111,8 +106,6 @@
     "truffle-contract": "2.0.1",
     "truffle-expect": "0.0.3",
     "web3": "0.18.4",
-
-
     "@angular/common": "4.3.5",
     "@angular/compiler": "4.3.5",
     "@angular/core": "4.3.5",
