--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@angular/compiler-cli": "4.3.5",
     "@types/core-js": "0.9.36",
     "@types/jasmine": "2.5.54",
-    "@types/node": "^7.0.7",
+    "@types/node": "7.0.7",
     "autoprefixer": "7.1.4",
     "bs58": "4.0.1",
     "codelyzer": "3.1.2",
