--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "tslint": "5.7.0",
     "typescript": "2.5.2",
     "url-loader": "0.5.9",
-    "web3-fake-provider": "^0.1.0",
+    "web3-fake-provider": "0.1.0",
     "webdriver-manager": "12.0.6",
     "webpack": "3.5.6",
     "webpack-dev-server": "2.7.1"
@@ -103,7 +103,7 @@
     "ipfs-api": "git+https://github.com/aletheia-foundation/js-ipfs-api.git",
     "jquery": "3.2.1",
     "q": "1.5.0",
-    "request-promise-native": "^1.0.4",
+    "request-promise-native": "1.0.4",
     "truffle-contract": "2.0.1",
     "truffle-expect": "0.0.3",
     "web3": "0.18.4",
