fix the task npm run electron:serve

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build:electron:main": "tsc main.ts --outDir dist && copyfiles package.json dist && cd dist && npm install --prod && cd ..",
     "build": "webpack --display-error-details && npm run build:electron:main",
     "build:prod": "cross-env NODE_ENV=production npm run build",
-    "electron:serve": "npm run build:electron:main && electron ./dist --serve",
+    "electron:serve": "npm run build && electron ./dist --serve",
     "electron:test": "electron ./dist",
     "electron:dev": "npm run build && electron ./dist",
     "electron:prod": "npm run build:prod && electron ./dist",
@@ -51,9 +51,9 @@
     "cross-env": "5.0.5",
     "css-loader": "0.28.7",
     "cssnano": "3.10.0",
-    "electron": "1.7.6",
-    "electron-packager": "9.0.1",
-    "electron-reload": "1.2.1",
+    "electron": "1.7.10",
+    "electron-packager": "10.1.1",
+    "electron-reload": "1.2.2",
     "ethereumjs-testrpc": "3.9.2",
     "expect.js": "0.3.1",
     "exports-loader": "0.6.4",
