--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
   "license": "LGPL-3.0",
   "devDependencies": {
     "@angular/cli": "1.4.1",
-    "@angular/compiler-cli": "4.3.5",
+    "@angular/compiler-cli": "5.1.3",
     "@types/core-js": "0.9.36",
     "@types/jasmine": "2.5.54",
     "@types/node": "7.0.7",
     "autoprefixer": "7.1.4",
     "bs58": "4.0.1",
-    "codelyzer": "3.1.2",
+    "codelyzer": "4.0.2",
     "copyfiles": "1.2.0",
     "cross-env": "5.0.5",
     "css-loader": "0.28.7",
@@ -99,22 +99,25 @@
     "webpack-dev-server": "2.7.1"
   },
   "dependencies": {
-    "@angular/common": "4.3.5",
-    "@angular/compiler": "4.3.5",
-    "@angular/core": "4.3.5",
-    "@angular/forms": "4.3.5",
-    "@angular/http": "4.3.5",
-    "@angular/platform-browser": "4.3.5",
-    "@angular/platform-browser-dynamic": "4.3.5",
-    "@angular/router": "4.3.5",
+    "@angular/common": "5.1.3",
+    "@angular/compiler": "5.1.3",
+    "@angular/core": "5.1.3",
+    "@angular/forms": "5.1.3",
+    "@angular/http": "5.1.3",
+    "@angular/platform-browser": "5.1.3",
+    "@angular/platform-browser-dynamic": "5.1.3",
+    "@angular/router": "5.1.3",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.8",
+    "bootstrap": "4.0.0-beta.3",
     "config": "1.26.1",
     "core-js": "2.4.1",
     "enhanced-resolve": "3.3.0",
     "ipfs-api": "17.2.6",
     "jquery": "3.2.1",
+    "popper.js": "1.12.9",
     "q": "1.5.0",
     "request-promise-native": "1.0.4",
-    "rxjs": "5.4.3",
+    "rxjs": "5.5.0",
     "truffle-contract": "2.0.1",
     "truffle-expect": "0.0.3",
     "web3": "0.18.4",
