--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "webpack-dev-server": "2.7.1"
   },
   "dependencies": {
+    "@angular/animations": "^5.1.3",
     "@angular/common": "5.1.3",
     "@angular/compiler": "5.1.3",
     "@angular/core": "5.1.3",
@@ -108,6 +109,7 @@
     "@angular/platform-browser-dynamic": "5.1.3",
     "@angular/router": "5.1.3",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.8",
+    "angular2-notifications": "^0.9.7",
     "bootstrap": "4.0.0-beta.3",
     "config": "1.26.1",
     "core-js": "2.4.1",
