add ipfs client. Set webpack target correctly to avoid using browser shims such as Buffer.js when in electron.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "ng": "ng",
     "lint": "ng lint",
     "start": "webpack --watch",
-    "start:web": "webpack-dev-server --content-base . --port 4200 --inline",
+    "start:web": "webpack-dev-server --target web --content-base . --port 4200 --inline",
     "build:electron:main": "tsc main.ts --outDir dist && copyfiles package.json dist && cd dist && npm install --prod && cd ..",
     "build": "webpack --display-error-details && npm run build:electron:main",
     "build:prod": "cross-env NODE_ENV=production npm run build",
@@ -39,8 +39,9 @@
   "author": "aletheia-foundation",
   "license": "LGPL-3.0",
   "devDependencies": {
-    "@angular/cli": "1.4.1",
+    "@angular/cli": "^1.6.3",
     "@angular/compiler-cli": "5.1.3",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.9",
     "@types/core-js": "0.9.36",
     "@types/jasmine": "2.5.54",
     "@types/node": "7.0.7",
@@ -70,6 +71,7 @@
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
     "karma-sourcemap-loader": "0.3.7",
+    "karma-webpack": "^2.0.9",
     "less-loader": "4.0.5",
     "minimist": "1.2.0",
     "mkdirp": "0.5.1",
@@ -89,14 +91,14 @@
     "truffle-config": "1.0.0",
     "truffle-contract": "2.0.1",
     "truffle-expect": "0.0.3",
-    "ts-node": "3.3.0",
+    "ts-node": "^4.1.0",
     "tslint": "5.7.0",
     "typescript": "2.5.2",
     "url-loader": "0.5.9",
     "web3-fake-provider": "0.1.0",
     "webdriver-manager": "12.0.6",
-    "webpack": "3.5.6",
-    "webpack-dev-server": "2.7.1"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.10.1"
   },
   "dependencies": {
     "@angular/animations": "^5.1.3",
@@ -109,11 +111,13 @@
     "@angular/platform-browser-dynamic": "5.1.3",
     "@angular/router": "5.1.3",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.8",
+    "@types/ipfs": "git+https://github.com/zabirauf/ipfs-types.git",
     "angular2-notifications": "^0.9.7",
     "bootstrap": "4.0.0-beta.3",
     "config": "1.26.1",
     "core-js": "2.4.1",
-    "enhanced-resolve": "3.3.0",
+    "enhanced-resolve": "^4.0.0-beta.4",
+    "go-ipfs-dep": "^0.4.13",
     "ipfs-api": "17.2.6",
     "jquery": "3.2.1",
     "popper.js": "1.12.9",
