update versions of dependencies

--- a/package.json
+++ b/package.json
@@ -40,17 +40,18 @@
   "license": "LGPL-3.0",
   "devDependencies": {
     "@angular/cli": "^1.6.3",
-    "@angular/compiler-cli": "5.1.3",
+    "@angular/compiler-cli": "5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.9",
     "@types/core-js": "0.9.36",
-    "@types/jasmine": "2.5.54",
+    "@types/jasmine": "2.8.3",
     "@types/node": "7.0.7",
-    "autoprefixer": "7.1.4",
+    "@ngtools/webpack": "^1.9.4",
+    "autoprefixer": "7.2.4",
     "bs58": "4.0.1",
     "codelyzer": "4.0.2",
     "copyfiles": "1.2.0",
-    "cross-env": "5.0.5",
-    "css-loader": "0.28.7",
+    "cross-env": "5.1.3",
+    "css-loader": "0.28.8",
     "cssnano": "3.10.0",
     "electron": "1.7.10",
     "electron-packager": "10.1.1",
@@ -58,43 +59,43 @@
     "ethereumjs-testrpc": "3.9.2",
     "expect.js": "0.3.1",
     "exports-loader": "0.6.4",
-    "file-loader": "0.11.2",
-    "html-loader": "0.5.1",
+    "file-loader": "1.1.6",
+    "html-loader": "0.5.4",
     "istanbul-instrumenter-loader": "3.0.0",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
     "json-loader": "0.5.7",
-    "karma": "1.7.1",
+    "karma": "2.0.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
-    "karma-coverage-istanbul-reporter": "1.3.0",
-    "karma-jasmine": "1.1.0",
+    "karma-coverage-istanbul-reporter": "1.3.3",
+    "karma-jasmine": "1.1.1",
     "karma-jasmine-html-reporter": "0.2.2",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "^2.0.9",
     "less-loader": "4.0.5",
     "minimist": "1.2.0",
     "mkdirp": "0.5.1",
-    "mocha": "3.4.2",
-    "postcss-loader": "2.0.6",
-    "postcss-url": "7.1.2",
-    "protractor": "5.1.2",
+    "mocha": "4.1.0",
+    "postcss-loader": "2.0.10",
+    "postcss-url": "7.3.0",
+    "protractor": "5.2.2",
     "raw-loader": "0.5.1",
     "sass-loader": "6.0.6",
-    "script-loader": "0.7.0",
-    "sinon": "1.17.7",
-    "solc": "0.4.11",
-    "source-map-loader": "0.2.1",
-    "style-loader": "0.18.2",
+    "script-loader": "0.7.2",
+    "sinon": "4.1.4",
+    "solc": "0.4.19",
+    "source-map-loader": "0.2.3",
+    "style-loader": "0.19.1",
     "stylus-loader": "3.0.1",
     "truffle": "3.3.2",
     "truffle-config": "1.0.0",
     "truffle-contract": "2.0.1",
     "truffle-expect": "0.0.3",
     "ts-node": "^4.1.0",
-    "tslint": "5.7.0",
-    "typescript": "2.5.2",
-    "url-loader": "0.5.9",
+    "tslint": "5.9.1",
+    "typescript": "2.6.2",
+    "url-loader": "0.6.2",
     "web3-fake-provider": "0.1.0",
     "webdriver-manager": "12.0.6",
     "webpack": "^3.10.0",
@@ -102,31 +103,30 @@
   },
   "dependencies": {
     "@angular/animations": "^5.1.3",
-    "@angular/common": "5.1.3",
-    "@angular/compiler": "5.1.3",
-    "@angular/core": "5.1.3",
-    "@angular/forms": "5.1.3",
-    "@angular/http": "5.1.3",
-    "@angular/platform-browser": "5.1.3",
-    "@angular/platform-browser-dynamic": "5.1.3",
-    "@angular/router": "5.1.3",
+    "@angular/common": "5.2.0",
+    "@angular/compiler": "5.2.0",
+    "@angular/core": "5.2.0",
+    "@angular/forms": "5.2.0",
+    "@angular/http": "5.2.0",
+    "@angular/platform-browser": "5.2.0",
+    "@angular/platform-browser-dynamic": "5.2.0",
+    "@angular/router": "5.2.0",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.8",
     "@types/ipfs": "git+https://github.com/zabirauf/ipfs-types.git",
     "angular2-notifications": "^0.9.7",
     "bootstrap": "4.0.0-beta.3",
-    "config": "1.26.1",
-    "core-js": "2.4.1",
+    "core-js": "2.5.3",
     "enhanced-resolve": "^4.0.0-beta.4",
     "go-ipfs-dep": "^0.4.13",
-    "ipfs-api": "17.2.6",
+    "ipfs-api": "17.2.7",
     "jquery": "3.2.1",
     "popper.js": "1.12.9",
-    "q": "1.5.0",
-    "request-promise-native": "1.0.4",
-    "rxjs": "5.5.0",
+    "q": "1.5.1",
+    "request-promise-native": "1.0.5",
+    "rxjs": "5.5.6",
     "truffle-contract": "2.0.1",
     "truffle-expect": "0.0.3",
     "web3": "0.18.4",
-    "zone.js": "0.8.17"
+    "zone.js": "0.8.20"
   }
 }
