--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "request-promise-native": "^1.0.4",
     "truffle-contract": "3.0.0",
     "truffle-expect": "0.0.3",
-    "web3": "0.18.4"
+    "web3": "0.18.4",
+    "zeppelin-solidity": "^1.5.0"
   }
 }
