--- a/package.json
+++ b/package.json
@@ -4,16 +4,14 @@
   "description": "Decentralised science",
   "main": "main.js",
   "scripts": {
-    "startOld": "./node_modules/.bin/truffle migrate && electron .",
-    "testOld": "./node_modules/.bin/truffle test && ./node_modules/.bin/truffle migrate && mocha",
     "ethereum-local": "testrpc",
     "ipfs-local": "node ./scripts/ipfs-local.js",
     "ethereum-testnet": "./scripts/start-geth-testnet.sh",
     "ethereum-testnet:attach": "./scripts/attach-geth-testnet.sh",
     "ng": "ng",
     "lint": "ng lint",
-    "start": "webpack --watch",
-    "start:web": "webpack-dev-server --target web --content-base . --port 4200 --inline",
+    "start": "webpack-dev-server --target web --content-base . --port 4200 --inline",
+    "start:web": "./node_modules/.bin/truffle migrate && npm run start",
     "build:electron:main": "tsc main.ts --outDir dist && copyfiles package.json dist && cd dist && npm install --prod && cd ..",
     "build": "webpack --display-error-details && npm run build:electron:main",
     "build:prod": "cross-env NODE_ENV=production npm run build",
@@ -25,8 +23,7 @@
     "electron:windows": "npm run build:prod && node package.js --asar --platform=win32 --arch=ia32",
     "electron:mac": "npm run build:prod && node package.js --asar --platform=darwin --arch=x64",
     "test": "karma start ./karma.conf.js",
-    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet && npm run build",
-    "e2e": "protractor ./protractor.conf.js"
+    "test-truffle": "./node_modules/.bin/truffle test"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -79,7 +76,6 @@
     "mocha": "4.1.0",
     "postcss-loader": "2.0.10",
     "postcss-url": "7.3.0",
-    "protractor": "5.2.2",
     "raw-loader": "0.5.1",
     "sass-loader": "6.0.6",
     "script-loader": "0.7.2",
