--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "electron:windows": "npm run build:prod && node package.js --asar --platform=win32 --arch=ia32",
     "electron:mac": "npm run build:prod && node package.js --asar --platform=darwin --arch=x64",
     "test": "karma start ./karma.conf.js",
+    "test:ci": "karma start ./karma.conf.js --singleRun true",
     "test-truffle": "./node_modules/.bin/truffle test"
   },
   "repository": "https://github.com/electron/electron-quick-start",
@@ -39,10 +40,10 @@
     "@angular/cli": "^1.6.3",
     "@angular/compiler-cli": "5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.9",
+    "@ngtools/webpack": "^1.9.4",
     "@types/core-js": "0.9.36",
     "@types/jasmine": "2.8.3",
     "@types/node": "7.0.7",
-    "@ngtools/webpack": "^1.9.4",
     "autoprefixer": "7.2.4",
     "bs58": "4.0.1",
     "codelyzer": "4.0.2",
