upgrade to ganache

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Decentralised science",
   "main": "main.js",
   "scripts": {
-    "ethereum-local": "testrpc",
+    "ethereum-local": "ganache-cli",
     "ipfs-local": "node ./scripts/ipfs-local.js",
     "ethereum-testnet": "./scripts/start-geth-testnet.sh",
     "ethereum-testnet:attach": "./scripts/attach-geth-testnet.sh",
@@ -55,10 +55,10 @@
     "electron": "1.7.10",
     "electron-packager": "10.1.1",
     "electron-reload": "1.2.2",
-    "ethereumjs-testrpc": "3.9.2",
     "expect.js": "0.3.1",
     "exports-loader": "0.6.4",
     "file-loader": "1.1.6",
+    "ganache-cli": "^6.0.3",
     "html-loader": "0.5.4",
     "istanbul-instrumenter-loader": "3.0.0",
     "jasmine-core": "2.8.0",
@@ -86,7 +86,7 @@
     "source-map-loader": "0.2.3",
     "style-loader": "0.19.1",
     "stylus-loader": "3.0.1",
-    "truffle": "3.3.2",
+    "truffle": "^4.0.6",
     "truffle-config": "1.0.0",
     "truffle-contract": "3.0.0",
     "truffle-expect": "0.0.3",
