update ui to submit to the new contracts

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "ng": "ng",
     "lint": "ng lint",
     "start": "webpack-dev-server --target web --content-base . --port 4200 --inline",
-    "start:web": "./node_modules/.bin/truffle migrate && npm run start",
+    "start:web": "npm run truffle:migrate && npm run start",
+    "truffle:migrate": "./node_modules/.bin/truffle migrate",
     "build:electron:main": "tsc main.ts --outDir dist && copyfiles package.json dist && cd dist && npm install --prod && cd ..",
     "build": "webpack --display-error-details && npm run build:electron:main",
     "build:prod": "cross-env NODE_ENV=production npm run build",
